# autouato

./: .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml
audio-test/: Cargo.toml
audio-test/src/: main.rs  mp4.rs
audio-test/tests/: dasp.rs  pcm.rs  vad.rs
pages/: index.tsx
src-python/: Cargo.toml  hello.py  test.py
src-python/src/: main.rs  mp4.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/customer/: service.rs
src-tauri/tests/: ffmpeg.rs
src-tauri/vad/: Cargo.toml
src-tauri/vad/src/: lib.rs  mp4.rs  speech.rs
