[package]
name = "audio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5.1", features = ["isomp4", "aac"] }
tch = "0.9.0"
log = "*"
dasp = {version = "*", features = ["all"]}
tract-onnx = {version = "0.18.4"}
image = "0.24.1"
hound = "3"

[[test]]
name = "pcm"
harness = false

[[test]]
name = "vad"
harness = false

[[test]]
name = "dasp"
harness = false

